# WebApp

./: README.md
Client/: package.json
Client/src/: LoginManager.js  application.js  index.css  index.js  public.css  public.js  registerServiceWorker.js
RestApi/: Cargo.toml
RestApi/src/: database.rs  main.rs  message.rs  profiles.rs
