[package]
name = "rest_api"
version = "0.1.0"
authors = ["Lilith645 <lilith@inet-sys.com>"]

[dependencies]
rocket = "0.3.13"
rocket_codegen = "0.3.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket_cors = "*"
rand = "*"
rusqlite = "0.13"
validator = "0.6.3"
validator_derive = "0.6.1"

[dependencies.rocket_contrib]
rocket_contrib = "*"
default-features = false
features = ["json"]
